src/test/resources/kube/quarkus/authentication/authentication-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: auth0-authentication
  namespace: istio-system
spec:
  selector:
      matchLabels:
        istio: ingressgateway
  jwtRules:
  - issuer: "https://dev-0kw21a7w.auth0.com/"
    audiences: 
     - "https://api.istio-test.com/"
    jwksUri: "https://dev-0kw21a7w.auth0.com/.well-known/jwks.json"
---
apiVersion: "security.istio.io/v1beta1"
kind: "AuthorizationPolicy"
metadata:
  name: "frontend-ingress"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  action: DENY
  rules:
  - to:
    - operation:
        paths: ["/secret", "/asecret.html", "/secretgroup"]
